force-app/main/default/objects/RD_tblPosCalRating__c/RD_tblPosCalRating__c.object-meta.xml
<CustomObject>
    <label>RD tblPosCalRating</label>
    <nameField>
        <label>RD tblPosCalRating</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD tblPosCalRating</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>