force-app/main/default/objects/RD_tblPosCalRating__c/fields/MinGrdlRatedLL__c.field-meta.xml
<CustomField>
    <fullName>MinGrdlRatedLL__c</fullName>
    <label>MinGrdlRatedLL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>