force-app/main/default/objects/RD_tblPosCalRating__c/fields/MinTSMfgRngLL__c.field-meta.xml
<CustomField>
    <fullName>MinTSMfgRngLL__c</fullName>
    <label>MinTSMfgRngLL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>