force-app/main/default/objects/RD_tblPosCalRating__c/fields/MinTSMfgRngUL__c.field-meta.xml
<CustomField>
    <fullName>MinTSMfgRngUL__c</fullName>
    <label>MinTSMfgRngUL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>