force-app/main/default/objects/RD_tblPosCalRating__c/fields/NRSC1Thck__c.field-meta.xml
<CustomField>
    <fullName>NRSC1Thck__c</fullName>
    <label>NRSC1Thck</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>