force-app/main/default/objects/RD_tblPosCalRating__c/fields/NRSealthck__c.field-meta.xml
<CustomField>
    <fullName>NRSealthck__c</fullName>
    <label>NRSealthck</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>