force-app/main/default/objects/RD_tblPosCalRating__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>SZC__c</columns>
    <columns>TempLL__c</columns>
    <columns>TempUL__c</columns>
    <columns>MinGrdlRatedLL__c</columns>
    <columns>MinGrdlRatedUL__c</columns>
    <columns>MinTSMfgRngLL__c</columns>
    <columns>MinTSMfgRngUL__c</columns>
    <columns>NRSC1Thck__c</columns>
    <columns>NRSC2Thck__c</columns>
    <columns>SC1Thck__c</columns>
    <columns>SC2Thck__c</columns>
    <columns>SealThck__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>